--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -12,3 +12,12 @@ jobs:
       uses: actions/hello-world-javascript-action@v1.1 # Name of the action. This uses https://github.com/actions/hello-world-javascript-action
       with:                                            # This section is needed if you need to pass arguments to the action
         who-to-greet: 'Mona the Octocat'
+
+    - name: 
+          runs: 'dotnet build`
+          runs: 'cd'
+          runs: 'cd DotnetTemplate.Web'
+          runs: 'npm install'
+          runs: 'dotnet test'
+          runs: 'npm t'
+          runs: 'npm run lint'
