--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -20,6 +20,7 @@ jobs:
       working-directory: 'DotnetTemplate.Web'
     - run: dotnet test
     - run: npm t
+      working-directory: 'DotnetTemplate.Web'
     - run: npm run lint
-    
+
     
