--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -22,5 +22,6 @@ jobs:
     - run: npm t
       working-directory: 'DotnetTemplate.Web'
     - run: npm run lint
+      working-directory: 'DotnetTemplate.Web'
 
     
